AC_INIT(examples/life/Makefile.in)
AC_PREREQ(2.59)

AC_ARG_WITH(mpi,[--with-mpi=dir - location of MPI compilation and run scripts],,with_mpi=/usr/local/bin)
AC_ARG_WITH(pnetcdf,[--with-pnetcdf=dir - location of pNetCDF libraries],,with_pnetcdf=no)
AC_ARG_WITH(fpmpi2,[--with-fpmpi2=dir - location of FPMPI2 libraries],,with_fpmpi2=no)
#
# Try to find the compiler
if test -d "$with_mpi" -a -x "$with_mpi/mpicc" ; then
    MPI_DIR=$with_mpi
fi
if test -n "$MPI_DIR" ; then
    CC=$MPI_DIR/mpicc
else
    AC_MSG_ERROR([You must specify the directory containing the MPI compilation scripts using the --with-mpi=dir option])
fi

AC_PROG_CC
#
# Find the MPI location
# Try to find drand48
# Try to find nanosleep
AC_CHECK_FUNCS(drand48 nanosleep)
# If we didn't find them, try with a few options
if test "$ac_cv_func_drand48" != yes ; then
    saveCFLAGS=$CFLAGS
    CFLAGS="$CFLAGS -D_XOPEN_SOURCE"
    AC_MSG_CHECKING([for drand48 defined when _XOPEN_SOURCE is defined])
    AC_TRY_LINK([#include <>],[double a=drand48();],pac_cv_func_drand48_with_xopen=yes,pac_cv_func_drand48_with_xopen=no)
    AC_MSG_RESULT($pac_cv_drand48_with_xopen)
    if test "$pac_cv_drand48_with_xopen" != yes ; then
        CFLAGS=$saveCFLAGS
        AC_MSG_WARN([Some examples require the random number generator drand48])
    fi
fi

if test "$with_pnetcdf" != no -a -d "$with_pnetcdf" ; then
    PNETCDF_DIR=$with_pnetcdf
fi

if test "$with_fpmpi2" != no -a -d "$with_fpmpi2" ; then
    FPMPI2_DIR=$with_fpmpi2
fi

AC_SUBST(MPI_DIR)
AC_SUBST(PNETCDF_DIR)
AC_SUBST(FPMPI2_DIR)
AC_OUTPUT(examples/life/Makefile examples/sparsemat/Makefile examples/pneo/Makefile examples/mutex/Makefile )
